--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-  <button id="myButton">button</button>
-  <script src="ajax.js"></script>
+  <button id="myButton">点我</button>
+  <script src="main.js"></script>
 </body>
 </html>
